--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "googleapis": "^133.0.0",
     "lodash": "^4.17.21",
     "next": "14.1.0",
+    "prettier": "^3.7.4",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.2"
