--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.16.1",
+    "dayjs": "^1.11.19",
     "googleapis": "^133.0.0",
     "lodash": "^4.17.21",
     "next": "14.1.0",
